added links  of my profile

--- a/index.html
+++ b/index.html
@@ -6,17 +6,13 @@
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <script src="https://kit.fontawesome.com/3c93c72e37.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <!-- <header >
-      <h1 class="header">Tic Tac Toe</h1>
-    </header> -->
-
     <main>
       <div class="msg-container hide">
         <p id="msg">Hello You are nice</p>
         <button class="btn" id="newGame">New Game</button>
-
       </div>
       <div class="game">
         <button class="box"></button>
@@ -28,19 +24,17 @@
         <button class="box"></button>
         <button class="box"></button>
         <button class="box"></button>
-        
       </div>
       <div class="controls">
         <button class="btn" id="resetGame">Reset Game</button>
-        
       </div>
     </main>
-
     <footer>
-      <a target="_blank" href="https://icons8.com/icon/nTYTb3cPpz4T/tic-tac-toe"
-        >Tic Tac Toe</a
-      >
-      icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+      <div class="socials">
+        <p class="author">Created By Chetan Kumar Sahu</p>
+        <img id="github-link" class="brand-icon" src="github.svg" alt="">
+        <img id="linkedin-link" class="brand-icon" src="linkedIn.svg" alt="">        
+      </div>
     </footer>
     <script src="main.js"></script>
   </body>
